fixed title logo stretched

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   font-size: 2em;
   margin-top: 5vh;
   margin-bottom: 3vh;
-  transform: scale(.9, 1);
+  /*transform: scale(.9, 1);*/
 }
 
 h1 {
